examples/test/testpolicy8066.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8066
  namespace: namespace213
spec:
  podSelector:
    matchLabels:
      key24: value2
      key4: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value41
          key0: value14
      podSelector:
        matchLabels:
          key27: value8
          key37: value5
          key43: value45
